Visit,
https://github.com/simple-last-fm-scrobbler/sls
For more details.

- 1.5.8 (2018-6-24)
  * Themes
  * Many Apps Supported (API 21+)
  * Notification Listener
  * Notification Fixes
  * Fixes (thanks to G00fY2)
  * Features (thanks to 4-Eyes)
  * Bugs & Languages fixes thanks to many

- 1.5.7 (2018-1-8)
  * Fix scrobbles on Android 8 and higher (thanks to G00fY2)
  * Switch to SDK 25 to allow receiving implicit broadcasts
  * Add back Android 2.3 Support

- 1.5.6 (2017-9-17)
  * Update from Android 24 SDK to 26 (Android 8)

- 1.5.5 (2017-9-16)
  * ListenBrainz fix (thanks to @19379)
  * Notice: Version 1.5.6 dropping android < 4.0 support
  * Notice: Version 1.5.6 will be released soon after version 1.5.5
  * Notice: If you are interested in starting a 'old android' fork please email.

- 1.5.4 (2017-2-4)
  * Bug fixes
  * Add Ukrainian translation (thanks to personaljesusua)
  * Add Chinese translation (thanks to cmpute)

- 1.5.3 (2016-11-21)
  * ListenBrainz support (testing)
  * Clear Unused Apps List Feature
  * Only Show Logged In Services in Status
  * Apache 2.0 License

- 1.5.2 (2016-11-15)
  * GNU-fm is for home built servers
  * Libre.fm solo Love Track
  * Polish fix (thanks to ksz16)

- 1.5.1 (2016-09-24)
  * Better request timeout
  * GNU-fm alternate (thanks to ejegg)
  * Better control of OnGoing Service

- 1.5.0 (2016-1-1)
  * Bug fixes and more (thanks to inverse)
  * Add Portuguese Brazil translations (thanks to MendelGusmao)
  * Add Huawei support
  * Add Polish translation (thanks to Grzes58)
  * Add Phone Notification to ensure scrobbles
  * Add Deezer Support
  * Add Love track and copy feature
  * Network notifications
  * Last.fm API 2.0
  * Add Czech (thanks to Michal Absolin)
  * Add Russian translation (thanks to bajituka)
  * Edit Scrobble Cache

- 1.4.9 (2015-08-09)
  * Add French translation (thanks to pierreduchemin)
  * Add Spanish translation (thanks to moshpirit)
  * Add support for Spotify (thanks to inverse)