@@ -178,6 +178,14 @@
     <string name="advanced_options_net_roaming_title">Roaming</string>
     <string name="advanced_options_net_roaming_summary_off">Won\'t submit data when roaming</string>
     <string name="advanced_options_net_roaming_summary_on">Will submit data when roaming</string>
+    <string name="notification_priority">Notification Priority</string>
+    <string-array name="notification_priority_list">
+        <item>min</item>
+        <item>low</item>
+        <item>default</item>
+        <item>high</item>
+        <item>max</item>
+    </string-array>
     <!-- END options_prefs strings -->
 
     <!-- START status strings -->
